src/scss/base/main.scss
html {
  box-sizing: border-box;
  font-family: Inter, sans-serif;
  font-weight: 400;
  font-size: 16px;
  scroll-behavior: smooth !important;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

.body {
  position: relative;
  overflow-x: hidden;
  color: var(--neutral-color-100);
  background-color: var(--neutral-color-10);
  transition:
    color var(--transition),
    background-color var(--transition);

  &--fixed {
    overflow-y: hidden;
  }
}

img {
  height: auto;
  max-width: 100%;
  object-fit: cover;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
ol {
  margin: 0;
}

input {
  outline: none;
  border: none;
}

a,
a:visited {
  text-decoration: none;
}

ul,
ol {
  list-style: none;
  padding: 0;
}

button {
  outline: none;
  border: none;
  background-color: transparent;
  cursor: pointer;
}

label {
  cursor: pointer;
}

.container {
  margin: 0 auto;
  padding: 0 var(--container-padding);
  max-width: calc(var(--container-width) + (var(--container-padding) * 2));
}

.hidden {
  font-size: 0;
  opacity: 0;
  visibility: hidden;
}

address {
  font-style: normal;
}

